objects/ContactHistory__c/ContactHistory__c.object-meta.xml
<CustomObject>
    <description>This object has been completed to provide a smaller set of field changes to the EDW team since ingesting the standard Salesforce ContactHistory object is too large and consumes to much space within AWS. Jira ticket SS-9176</description>
    <label>ContactHistory</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>ContactHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>