objects/ContactHistory__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact record that was updated</description>
    <inlineHelpText>The Contact record that was updated</inlineHelpText>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ContactHistory</relationshipLabel>
    <relationshipName>ContactHistory</relationshipName>
    <type>Lookup</type>
</CustomField>