objects/ContactHistory__c/fields/StandardContactHistoryID__c.field-meta.xml
<CustomField>
    <fullName>StandardContactHistoryID__c</fullName>
    <description>The ID of the record in the standard ContactHistory object</description>
    <inlineHelpText>The ID of the record in the standard ContactHistory object</inlineHelpText>
    <label>StandardContactHistoryID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>